--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,43 @@
-.topright {
-    display: inline-block;
+header {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    background-color: #ffffff;
+}
+
+.top{
+    text-align: right;
+}
+
+img {
+    margin: 10px;
+}
+
+ h1 {
+     background-color: #4aaaa5;
+ }
+
+ h2 {
+     margin-bottom: 30px;
+     margin-left: 30px;
+ }
+
+.mainInfoBox{
+    border-color: #dddddd;
+    border-width: 30px;
+    border: #dddddd;
+    width: 920px;
+    background-color: #ffffff;
+    margin: auto;
+    line-height: 2;
+}
+
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: darkslategray;
+    text-align: center;
+    border-top: 8px solid #4aaaa5;
+    color: white;
 }
