--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,9 @@
 /* My Header, Trying to get them to all float in the correct spot*/
-header {
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+header{
     font-family: Georgia, 'Times New Roman', Times, serif;
     background-color: #ffffff;
     margin: 0;
