--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 /* My Header, Trying to get them to all float in the correct spot*/
 body{
     font-family: Arial, Helvetica, sans-serif;
+    color: #777777;
 }
 
 header{
@@ -15,9 +16,6 @@ a{
     color: #666666;
 }
 
-a{
-    text-decoration: none;
-}
 .top{
     text-decoration: none;
     text-align: right;
@@ -30,6 +28,15 @@ a{
     color: white;
     padding: 20px;
     width: 920px;
+}
+
+.button {
+    text-align: left;
+    background-color: #4aaaa5;
+    color: white;
+    padding: 20px;
+    padding: 5px 20px;
+    margin-bottom: 15px;
 }
 
 hr{
@@ -47,7 +54,9 @@ img {
  h2 {
      margin-bottom: 30px;
      margin-left: 30px;
+     color: #4aaaa5;
  }
+
 
 .mainInfoBox{
     border-color: #dddddd;
@@ -60,6 +69,20 @@ img {
     margin-bottom: 75px;
 }
 
+.form {
+    margin: 20px;
+    width: 100%;
+}
+
+input {
+    width: 95%;
+    border-color: #777777;
+    border-width: 1px;
+}
+textarea {
+    width: 95%;
+    border-color: #777777;
+}
 
 footer {
     position: fixed;
