--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,14 +4,16 @@ body{
     color: #777777;
 }
 
-p {
-    margin: 15px;
-}
 header{
     font-family: Georgia, 'Times New Roman', Times, serif;
     background-color: #ffffff;
     margin: 0;
 }
+
+p {
+    margin: 15px;
+}
+
 
 a{
     text-decoration:none;
@@ -44,7 +46,10 @@ a{
 
 hr{
     color: grey;
-    margin: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 img {
@@ -56,12 +61,10 @@ img {
  }
 
  h2 {
-     margin-bottom: 30px;
      margin-left: 30px;
      margin-top: 30px;
      color: #4aaaa5;
  }
-
 
 .mainInfoBox{
     border-color: #dddddd;
@@ -70,7 +73,7 @@ img {
     width: 920px;
     background-color: #ffffff;
     margin: auto;
-    line-height: 2;
+    line-height: 1.5;
     margin-bottom: 75px;
 }
 
@@ -96,6 +99,22 @@ textarea {
     float: left;
     display: inline-block;
 }
+
+.container {
+    position: relative;
+}
+
+.textcenter {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+    background-color: #4aaaa5;
+    color: white;
+}
+
 footer {
     position: fixed;
     left: 0;
