--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,58 +2,15 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     color: #777777;
+    margin: 0px;
 }
 
 header{
     font-family: Georgia, 'Times New Roman', Times, serif;
     background-color: #ffffff;
-    margin: 0;
-}
-
-p {
-    margin: 15px;
-}
-
-
-a{
-    text-decoration:none;
-    padding: 15px;
-    color: #666666;
-}
-
-.top{
-    text-decoration: none;
-    text-align: right;
-    width: 920px;
-    margin: auto;
- }
-.name {
-    text-align: left;
-    background-color: #4aaaa5;
-    color: white;
-    padding: 20px;
-    width: 920px;
-}
-
-.button {
-    text-align: left;
-    background-color: #4aaaa5;
-    color: white;
-    padding: 20px;
-    padding: 5px 20px;
-    margin-bottom: 15px;
-}
-
-hr{
-    color: grey;
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-}
-
-img {
-    margin: 10px;
+    height: 70px;
+    width: 100%;
+    
 }
 
  h1 {
@@ -65,6 +22,74 @@ img {
      margin-top: 30px;
      color: #4aaaa5;
  }
+
+p {
+    margin: 15px;
+}
+a:hover {
+    color: #4aaaa5;
+}
+
+a{
+    text-decoration:none;
+    padding: 15px;
+    color: #666666;
+    
+}
+
+/*
+trying to get headers to cooperate!
+.headHr {
+    color: grey;
+    margin-top: 0px;
+}
+*/
+.aboutMe .bodyHr{
+    color: grey;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+} 
+
+hr {
+    color: grey;
+    margin: 0px;
+}
+img {
+    margin: 10px;
+}
+
+.top{
+    text-decoration: none;
+    text-align: right;
+    width: 920px;
+    margin: auto;
+    overflow: auto;
+    padding-top: 22px;
+ }
+
+ .name {
+     text-align: left;
+     margin: auto;
+ }
+
+.name {
+    position: absolute;
+    background-color: #4aaaa5;
+    color: white;
+    padding: 25.8px;
+    margin-left: 30px;
+}
+
+.button {
+    text-align: left;
+    background-color: #4aaaa5;
+    color: white;
+    padding: 20px;
+    padding: 5px 20px;
+    margin-bottom: 15px;
+}
 
 .mainInfoBox{
     border-color: #dddddd;
@@ -108,8 +133,8 @@ textarea {
     position: absolute;
     left: 0;
     top: 50%;
-    width: 100%;
-    text-align: center;
+    width: 33%;
+    text-align: left;
     font-size: 20px;
     background-color: #4aaaa5;
     color: white;
